build arrow link component.

--- a/index.html
+++ b/index.html
@@ -14,13 +14,6 @@
     <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
-      totam reiciendis sint provident voluptatum laborum sequi, molestiae
-      dignissimos libero voluptatem.
-    </p>
+    <a href="#" class="link-arrow">Learn more</a>
   </body>
 </html>
