--- a/index.html
+++ b/index.html
@@ -13,6 +13,5 @@
     <link rel="stylesheet" href="./CSS/normalize.css" />
     <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
-  <body>
-    
+  <body></body>
 </html>
