fixed call-out block.

--- a/index.html
+++ b/index.html
@@ -365,18 +365,20 @@
         </div>
       </div>
     </section>
-    <div class="callout callout--primary">
-      <div class="grid grid--1x2">
-        <div class="callout__content">
-          <h2 class="callout__heading">Ready to get started?</h2>
-          <p>
-            Sign up now and experience seamless cloud hosting with fast,
-            reliable performance and expert support available 24/7.
-          </p>
+    <div class="container">
+      <div class="callout callout--primary callout-signup">
+        <div class="grid grid--1x2">
+          <div class="callout__content">
+            <h2 class="callout__heading">Ready to get started?</h2>
+            <p>
+              Sign up now and experience seamless cloud hosting with fast,
+              reliable performance and expert support available 24/7.
+            </p>
+          </div>
+          <a href="#" class="button button--secondary button--stretched"
+            >Get Started!</a
+          >
         </div>
-        <a href="#" class="button button--secondary button--stretched"
-          >Get Started!</a
-        >
       </div>
     </div>
     <footer class="block block--dark footer">
